* Feb 15 2004, Henrik Isaksson *

 translators:
	- Updated for GCC3 and API changes.
	- Translators moved to /system/drivers/translators.

* Feb 8 2004, Henrik Isaksson *

 libcodeview:
	- Updated for GCC3.
	- Changed std::strings in interface to os::String.
	- Bumped version to 2.

* Feb 7 2004, Henrik Isaksson *

Updated AppServer, AppServer drivers and libsyllable for GCC3.

* Feb 1 2004, Kristian Van Der Vliet *

Update RTL8139 driver to support more compatible cards.  Patch from
Michael Krueger <invenies@web.de>

* Jan 9 2004, Henrik Isaksson *

Fixed bug in PNG translator when saving images wider than 256 pixels.

* Jan 3 2004, Kristian Van Der Vliet *

APM BIOS driver & APM battery meter Launcher plugin from Hilary Cheng
<tinyobject@yahoo.com>

* Jan 2 2004, Kristian Van Der Vliet *

Updates to the i810 ICH audio driver by Michael Krueger <invenies@web.de>  It
incorporates some cleanups from Linux 2.4 upstream patches by Herbert Xu and a
important fix for proper AC97 codec initialization.

* Dec 31 2003, Kristian Van Der Vliet *

Updates to the Savage IX/MX driver using the latest code from the official S3/Via
driver, from Hilary Cheng <tinyobject@yahoo.com>

* Dec 31 2003, Kristian Van Der Vliet *

Improved IMPS2/PS2 mouse detection in the PS/2 mouse driver from Damien Danneels
<ddanneels@free.fr>

* Dec 2 2003, Kaj de Vos *

Fixed and cleaned up many build problems of several sorts all over the system
over the past few days. See commit messages for details.

* Nov 30 2003, Henrik Isaksson *

Added some command line options to ls_ports, and made it recognize the new
format of message port flag bits.

* Nov 22 2003, Henrik Isaksson *

Updated CodeView's Makefile to link against libsyllable.

* Nov 18 2003, Kristian Van Der Vliet *

Sound drivers now export their device nodes to different locations to allow
multiple devices to work at the same time.  DSP devices are created as
/dev/sound/<name>/dsp/<dsp #> and mixer devices are